kubernetes/apps/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
