kubernetes/apps/whoami/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.jacob-williams.me`)
      kind: Rule
      services:
        - name: whoami
          port: web
          scheme: http
          passHostHeader: true
      middlewares:
        - name: default-headers
